tests/syntax_error/string_zero_byte_hex.jou
"foo\x00bar"   # Error: strings cannot contain zero bytes (\x00), because that is the special end marker byte
